Bug 108709 - WARNING: CPU: 0 PID: 507 at lib/debugobjects.c:329 debug_print_object+0x6a/0x80
Summary: WARNING: CPU: 0 PID: 507 at lib/debugobjects.c:329 debug_print_object+0x6a/0x80
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/AMDgpu (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-11 10:56 UTC by mikhail.v.gavrilov
Modified: 2019-03-08 17:10 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (135.37 KB, text/plain)
2018-11-11 10:56 UTC, mikhail.v.gavrilov
no flags Details
dmesg 4.20.0-0.rc2.git2.1 before Chris patch (139.92 KB, text/plain)
2018-11-18 23:17 UTC, mikhail.v.gavrilov
no flags Details
dmesg 4.20.0-0.rc2.git2.1 after Chris patch (130.52 KB, text/plain)
2018-11-18 23:17 UTC, mikhail.v.gavrilov
no flags Details

Description mikhail.v.gavrilov 2018-11-11 10:56:44 UTC
Created attachment 142433 [details]
dmesg

$ inxi -bM
System:    Host: localhost.localdomain Kernel: 4.20.0-0.rc1.git4.1.fc30.x86_64 x86_64 bits: 64 Desktop: Gnome 3.30.1 
           Distro: Fedora release 30 (Rawhide) 
Machine:   Type: Desktop Mobo: ASUSTeK model: ROG STRIX X470-I GAMING v: Rev 1.xx serial: <root required> 
           UEFI: American Megatrends v: 0901 date: 07/23/2018 
CPU:       8-Core: AMD Ryzen 7 2700X type: MT MCP speed: 2805 MHz min/max: 2200/4000 MHz 
Graphics:  Device-1: Advanced Micro Devices [AMD/ATI] Vega 10 XL/XT [Radeon RX Vega 56/64] driver: amdgpu v: kernel 
           Display: wayland server: Fedora Project X.org 1.20.3 driver: amdgpu resolution: 3840x2160~60Hz 
           OpenGL: renderer: Radeon RX Vega (VEGA10 DRM 3.27.0 4.20.0-0.rc1.git4.1.fc30.x86_64 LLVM 7.0.0) v: 4.5 Mesa 18.2.4 
Network:   Device-1: Intel I211 Gigabit Network driver: igb 
           Device-2: Realtek RTL8822BE 802.11a/b/g/n/ac WiFi adapter driver: r8822be 
Drives:    Local Storage: total: 11.36 TiB used: 5.93 TiB (52.2%) 
Info:      Processes: 440 Uptime: 37m Memory: 31.30 GiB used: 16.56 GiB (52.9%) Shell: bash inxi: 3.0.27 


[    5.591649] [drm] amdgpu: 8176M of VRAM memory ready
[    5.591653] [drm] amdgpu: 8176M of GTT memory ready.
[    5.591743] [drm] GART: num cpu pages 131072, num gpu pages 131072
[    5.591908] [drm] PCIE GART of 512M enabled (table at 0x000000F400900000).
[    5.595509] [drm] use_doorbell being set to: [true]
[    5.595622] [drm] use_doorbell being set to: [true]
[    5.595963] [drm] Found UVD firmware Version: 1.87 Family ID: 17
[    5.595969] [drm] PSP loading UVD firmware
[    5.596266] ------------[ cut here ]------------
[    5.596268] ODEBUG: assert_init not available (active state 0) object type: timer_list hint:           (null)
[    5.596285] WARNING: CPU: 0 PID: 507 at lib/debugobjects.c:329 debug_print_object+0x6a/0x80
[    5.596286] Modules linked in: amdgpu(+) hid_logitech_hidpp(+) chash gpu_sched amd_iommu_v2 ttm drm_kms_helper crc32c_intel drm hid_sony ff_memless igb hid_logitech_dj nvme dca i2c_algo_bit nvme_core wmi pinctrl_amd uas usb_storage
[    5.596299] CPU: 0 PID: 507 Comm: systemd-udevd Tainted: G        W         4.20.0-0.rc1.git4.1.fc30.x86_64 #1
[    5.596301] Hardware name: System manufacturer System Product Name/ROG STRIX X470-I GAMING, BIOS 0901 07/23/2018
[    5.596303] RIP: 0010:debug_print_object+0x6a/0x80
[    5.596305] Code: 8b 43 10 83 c2 01 8b 4b 14 4c 89 e6 89 15 e6 82 b0 02 4c 8b 45 00 48 c7 c7 60 fd 34 a6 48 8b 14 c5 a0 da 08 a6 e8 6a 6a b8 ff <0f> 0b 5b 83 05 d0 45 3e 01 01 5d 41 5c c3 83 05 c5 45 3e 01 01 c3
[    5.596306] RSP: 0018:ffffa02ac863f8c0 EFLAGS: 00010282
[    5.596307] RAX: 0000000000000000 RBX: ffffa02ac863f8e0 RCX: 0000000000000006
[    5.596308] RDX: 0000000000000007 RSI: ffff9160e9a7bfe8 RDI: ffff9160f91d6c60
[    5.596310] RBP: ffffffffa6742740 R08: 0000000000000002 R09: 0000000000000000
[    5.596311] R10: 0000000000000000 R11: 0000000000000000 R12: ffffffffa634ff69
[    5.596312] R13: 00000000000b79d0 R14: ffffffffa80f76d8 R15: 0000000000266000
[    5.596313] FS:  00007f762abf7940(0000) GS:ffff9160f9000000(0000) knlGS:0000000000000000
[    5.596314] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[    5.596315] CR2: 000055fdc593f000 CR3: 00000007e999c000 CR4: 00000000003406f0
[    5.596317] Call Trace:
[    5.596321]  debug_object_assert_init+0x14a/0x180
[    5.596327]  del_timer+0x2e/0x90
[    5.596383]  amdgpu_fence_process+0x47/0x100 [amdgpu]
[    5.596430]  amdgpu_uvd_resume+0xf6/0x120 [amdgpu]
[    5.596475]  uvd_v7_0_sw_init+0xe0/0x280 [amdgpu]
[    5.596523]  amdgpu_device_init.cold.30+0xf97/0x14b6 [amdgpu]
[    5.596563]  ? amdgpu_driver_load_kms+0x53/0x330 [amdgpu]
[    5.596604]  amdgpu_driver_load_kms+0x86/0x330 [amdgpu]
[    5.596614]  drm_dev_register+0x115/0x150 [drm]
[    5.596654]  amdgpu_pci_probe+0xbd/0x120 [amdgpu]
[    5.596658]  local_pci_probe+0x41/0x90
[    5.596661]  pci_device_probe+0x188/0x1a0
[    5.596666]  really_probe+0xf8/0x3b0
[    5.596669]  driver_probe_device+0xb3/0xf0
[    5.596672]  __driver_attach+0xe1/0x110
[    5.596674]  ? driver_probe_device+0xf0/0xf0
[    5.596676]  bus_for_each_dev+0x79/0xc0
[    5.596679]  bus_add_driver+0x155/0x230
[    5.596681]  ? 0xffffffffc07d9000
[    5.596683]  driver_register+0x6b/0xb0
[    5.596685]  ? 0xffffffffc07d9000
[    5.596688]  do_one_initcall+0x5d/0x2be
[    5.596691]  ? rcu_read_lock_sched_held+0x79/0x80
[    5.596693]  ? kmem_cache_alloc_trace+0x264/0x290
[    5.596695]  ? do_init_module+0x22/0x210
[    5.596698]  do_init_module+0x5a/0x210
[    5.596701]  load_module+0x2137/0x2430
[    5.596703]  ? lockdep_hardirqs_on+0xed/0x180
[    5.596714]  ? __do_sys_init_module+0x150/0x1a0
[    5.596715]  __do_sys_init_module+0x150/0x1a0
[    5.596722]  do_syscall_64+0x60/0x1f0
[    5.596725]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
[    5.596726] RIP: 0033:0x7f762b877dee
[    5.596728] Code: 48 8b 0d 9d 20 0c 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 49 89 ca b8 af 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 6a 20 0c 00 f7 d8 64 89 01 48
[    5.596729] RSP: 002b:00007ffc777b8558 EFLAGS: 00000246 ORIG_RAX: 00000000000000af
[    5.596730] RAX: ffffffffffffffda RBX: 000055fdc48da320 RCX: 00007f762b877dee
[    5.596731] RDX: 00007f762b9f284d RSI: 00000000006c5fc6 RDI: 000055fdc527a060
[    5.596732] RBP: 00007f762b9f284d R08: 0000000000000003 R09: 0000000000000002
[    5.596733] R10: 000055fdc48ad010 R11: 0000000000000246 R12: 000055fdc527a060
[    5.596734] R13: 000055fdc48dca20 R14: 0000000000020000 R15: 0000000000000000
[    5.596740] irq event stamp: 134618
[    5.596743] hardirqs last  enabled at (134617): [<ffffffffa513d52e>] console_unlock+0x45e/0x610
[    5.596744] hardirqs last disabled at (134618): [<ffffffffa50037e8>] trace_hardirqs_off_thunk+0x1a/0x1c
[    5.596746] softirqs last  enabled at (133146): [<ffffffffa5e00365>] __do_softirq+0x365/0x47c
[    5.596748] softirqs last disabled at (133139): [<ffffffffa50c64f9>] irq_exit+0x119/0x120
[    5.596749] ---[ end trace eaee508abfebccdc ]---
[    5.597030] [drm] Found VCE firmware Version: 55.3 Binary ID: 4
[    5.597040] [drm] PSP loading VCE firmware
[    5.598690]  nvme0n1: p1 p2 p3
[    5.671546] PM: Image not found (code -22)
[    5.747192] [drm] reserve 0x400000 from 0xf400d00000 for PSP TMR SIZE
[    5.808672] input: Logitech T400 as /devices/pci0000:00/0000:00:07.1/0000:0c:00.3/usb3/3-4/3-4.1/3-4.1.3/3-4.1.3:1.2/0003:046D:C52B.0004/0003:046D:4026.0008/input/input14
[    5.809453] logitech-hidpp-device 0003:046D:4026.0008: input,hidraw5: USB HID v1.11 Keyboard [Logitech T400] on usb-0000:0c:00.3-4.1.3:1
[    5.829326] [drm] Display Core initialized with v3.1.68!
[    5.893855] [drm] Supports vblank timestamp caching Rev 2 (21.10.2013).
[    5.893857] [drm] Driver supports precise vblank timestamp query.
[    5.915201] [drm] UVD and UVD ENC initialized successfully.
[    6.015826] [drm] VCE initialized successfully.
Comment 1 Chris Wilson 2018-11-14 15:04:34 UTC
Just reordering uvd_resume and ring init seems ok, https://patchwork.freedesktop.org/patch/261826/
Comment 2 mikhail.v.gavrilov 2018-11-18 23:16:15 UTC
Yes, your patch fix this issue, thanks.
Comment 3 mikhail.v.gavrilov 2018-11-18 23:17:26 UTC
Created attachment 142508 [details]
dmesg 4.20.0-0.rc2.git2.1 before Chris patch
Comment 4 mikhail.v.gavrilov 2018-11-18 23:17:48 UTC
Created attachment 142509 [details]
dmesg 4.20.0-0.rc2.git2.1 after Chris patch
Comment 5 mikhail.v.gavrilov 2018-11-18 23:19:59 UTC
Chris, I am appreciate your work.
Hope to see this patch as soon as possible in mainline.
Comment 6 Lakshmi 2018-11-20 21:08:55 UTC
Chris, this issue happened today. I believe it's the same as original bug. 
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5173/fi-icl-y/igt@runner@aborted.html
Comment 7 Chris Wilson 2018-11-20 21:13:34 UTC
(In reply to Lakshmi from comment #6)
> Chris, this issue happened today. I believe it's the same as original bug. 
> https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5173/fi-icl-y/
> igt@runner@aborted.html

Nothing whatsoever to do with the amdgpu bug. You mean #108070
Comment 8 Lakshmi 2018-11-20 21:46:42 UTC
(In reply to Chris Wilson from comment #7)
> (In reply to Lakshmi from comment #6)
> > Chris, this issue happened today. I believe it's the same as original bug. 
> > https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5173/fi-icl-y/
> > igt@runner@aborted.html
> 
> Nothing whatsoever to do with the amdgpu bug. You mean #108070

Thanks Chris, #108070 is the right one.
Comment 9 Martin Peres 2019-03-08 16:50:23 UTC
The patch went in a while back (https://cgit.freedesktop.org/drm-tip/commit/drivers/gpu/drm/amd/amdgpu?id=3b34c14fd50c302db091f020f26dd00ede902c80). Closing now!
Comment 10 CI Bug Log 2019-03-08 17:10:16 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.